--- a/ms_studenthelp/src/main/resources/application.properties
+++ b/ms_studenthelp/src/main/resources/application.properties
@@ -3,6 +3,6 @@ server.error.include-message=always
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/ms_studenthelp
 spring.datasource.username=dummy
-spring.datasource.password=1234
+spring.datasource.password=zaezaeazea1E
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.application.name = demoservice
