--- a/ms_studenthelp/src/main/resources/application.properties
+++ b/ms_studenthelp/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-#server.port=8081
+server.port=8080
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/ms_studenthelp
 spring.datasource.username=dummy
 spring.datasource.password=1234
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.application.name = demoservice
-#spring.jpa.show-sql: true
