--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,6 @@ gradle-app.setting
 # End of https://www.toptal.com/developers/gitignore/api/java,gradle
 ms_studenthelp/bin/main/be/ecam/ms_studenthelp/MsStudenthelpApplication.class
 ms_studenthelp/.settings/org.eclipse.buildship.core.prefs
+
+# Properties of application
+**/application.properties
